# mdvwhole

./: .gitignore  README.md  requirements.txt  requirements_safe.txt  setup.cfg  setup.py  whole.gro  whole.py
src/mdvwhole/: whole.py
src/mdvwhole.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/mdvwhole/mdvwhole.egg-info/: PKG-INFO  top_level.txt
