[metadata]
name = mdvwhole
version = 0.0.7.1
author = BMH Bruininks, TA Wassenaar
author_email = bartbruininks@gmail.com
description = A small package for making point cloud objects whole in the presence of PBC
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BartBruininks/mdvwhole
project_urls =
    Bug Tracker = https://github.com/BartBruininks/mdvwhole/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
	argparse
	scipy
	numpy
	mdvoxelsegmentation
	networkx

[options.packages.find]
where = src
